--- a/sass/imports/radio_tabs.scss
+++ b/sass/imports/radio_tabs.scss
@@ -23,6 +23,7 @@
             flex: 1;
             padding: 1em 0.4em;
             cursor: pointer;
+            user-select: none;
 
             color: $white3;
             text-align: center;
