--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,9 +18,9 @@ $black4: #030307;
 
 $red1: #C41B1B;
 
-$blue1: #07080D;
-$blue2: #16171D;
-$blue3: #13A3FF;
+$blue1: #0A0B0D;
+$blue2: #17171A;
+$blue3: #76BDEB;
 
 $linkColor1: #489BDA;
 $linkColor2: #6D92B8;
