Refactor: SCSS names and HTML

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,7 +39,9 @@ $drawer-width: 20em;
 @import "reset",
         "general",
         "main_view",
-        "slidebar",
+        "levels_panel",
+        "generator_panel",
+        "reference_panel",
         "drawer",
         "radio_tabs",
         "input_styles",
