--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,13 +37,8 @@ $masterColor: #C765FF;
 $drawer-width: 20em;
 
 @import "reset",
-        "general",
+        "1_drawer",
         "main_view",
-        "levels_panel",
-        "generator_panel",
-        "reference_panel",
-        "drawer",
-        "radio_tabs",
         "input_styles",
         "media_queries",
         "noscript",
