--- a/sass/imports/dark.scss
+++ b/sass/imports/dark.scss
@@ -56,7 +56,7 @@ body[dark] {
 
 
     & .maincolumn {
-        border-left: 0.05em solid $black1;
+        border-left: 0.05rem solid $black1;
     }
 
     & .main {
