--- a/sass/imports/input_styles.scss
+++ b/sass/imports/input_styles.scss
@@ -1,8 +1,8 @@
 
 input[type=button], button {
     flex: 1;
-    padding: 0.5em;
-    margin: 0 0.2em;
+    padding: 0.5rem;
+    margin: 0 0.2rem;
 
 
     font-family: monospace;
@@ -13,7 +13,7 @@ input[type=button], button {
     cursor: pointer;
     border-width: 1px;
     border-color: $grey2;
-    border-radius: 0.2em;
+    border-radius: 0.2rem;
 
     transition: all 120ms;
 }
@@ -32,12 +32,12 @@ input[name=reset]:hover {
 
 input[type=text], input[type=number] {
     width: 100%;
-    padding: 0.3em 0.2em;
+    padding: 0.3rem 0.2rem;
 
     color: $grey1;
     text-align: center;
 
-    border-radius: 0.3em;
+    border-radius: 0.3rem;
     border: 1px solid $black1;
 
     transition: box-shadow 250ms;
