--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,18 +9,28 @@ $white3: #EBE4D1;
 $grey1: #292929;
 $grey2: #707070;
 $grey3: #C2BFBB;
-$grey4: #1D1D1D;
+$grey4: #111111;
+$grey5: #A8A8A8;
+
+$ggrey1: linear-gradient(to right, #212121, #1B1B1B);
 
 $black1: #020202;
 $black2: #080808;
 $black3: #0E0E0E;
 $black4: #030307;
 
+$gblack1: linear-gradient(to right, $grey4, $black2);
+$gblack2: linear-gradient(to bottom, $grey4, $black2);
+
 $red1: #C41B1B;
 
-$blue1: #0A0B0D;
-$blue2: #17171A;
-$blue3: #76BDEB;
+$blue1: #5B9FCB;
+$blue2: #1A3D72;
+
+$night1: #0A0B0D;
+$night2: #17171A;
+
+$gnight1: linear-gradient(to right, #0A0B0D, $black2);
 
 $linkColor1: #489BDA;
 $linkColor2: #6D92B8;
@@ -33,7 +43,6 @@ $passedColor: #00BF04;
 $expertColor: #BAFF00;
 $masterColor: #C765FF;
 
-
 $drawer-width: 23rem;
 
 @import "reset",
@@ -43,4 +52,5 @@ $drawer-width: 23rem;
         "media_queries",
         "noscript",
         "dark",
+        "material_icons",
         "word_generator"
