--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,7 @@ $grey3: #C2BFBB;
 $grey4: #111111;
 $grey5: #A8A8A8;
 
-$ggrey1: linear-gradient(to right, #212121, #1B1B1B);
+$ggrey1: linear-gradient(to right, #212121, #161616);
 
 $black1: #020202;
 $black2: #080808;
