--- a/sass/imports/1_drawer.scss
+++ b/sass/imports/1_drawer.scss
@@ -446,22 +446,27 @@ label[for="drawer-toggle"] {
 
                     & table {
                         width: 100%;
+                        margin: 0.6rem 0;
 
                         background: $grey1;
                         border-collapse: collapse;
+                        box-shadow: 0 0 0.4rem $black1;
 
                         & caption {
                             padding: 0.8rem 0rem;
+                            display: none;
                         }
 
                         & thead th {
                             padding: 0.8rem 0.2rem;
-                            border: 1px solid $white1;
+                            border-bottom: 1px solid $grey4;
+                            font-weight: normal;
+                            letter-spacing: 1px;
                         }
 
                         & tbody td {
-                            padding: 0.5rem;
-                            border: 1px solid $white1;
+                            padding: 0.5rem 1rem;
+                            border-bottom: 1px solid $grey4;
                             opacity: 0.9; // darken or lighten the text a little
 
                             &:first-child {
