UI Update: Number Generator and Spinner
Added loading spinner for dictionary
Also updated the wording for both download prompters

--- a/sass/imports/1_drawer.scss
+++ b/sass/imports/1_drawer.scss
@@ -405,7 +405,7 @@ label[for="drawer-toggle"] {
                         }
                     }
 
-                    .generated_word {
+                    .generated_word, .generated_nums {
                         display: block;
                         color: $grey3;
                         text-align: center;
