Added: New generator functionality

--- a/sass/imports/reset.scss
+++ b/sass/imports/reset.scss
@@ -50,6 +50,15 @@ span[mono] {
     font-family: monospace;
 }
 
+span.dancing_man {
+    &:before {
+        content: "...";
+        font-family: monospace;
+        width: 100%;
+        animation: dancing_content 2s infinite linear;
+    }
+}
+
 span.spinner {
     display: inline-block;
     &:before {
@@ -58,6 +67,15 @@ span.spinner {
         margin: 0 0.4rem;
     }
     animation: spinner 1.5s infinite linear;
+}
+
+@keyframes dancing_content {
+    0% {
+        content: "/-(0.0)-/"
+    }
+    100% {
+        content: "\\-(0.0)-\\"
+    }
 }
 
 @keyframes spinner {
