UI Update: Fully responsive design

--- a/sass/imports/2_content.scss
+++ b/sass/imports/2_content.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     height: 100%;
     width: 100%;
+    min-width: 16.5rem;
 
     position: fixed;
     overflow-x: hidden;
