--- a/sass/imports/1_drawer.scss
+++ b/sass/imports/1_drawer.scss
@@ -6,6 +6,7 @@
     position: fixed;
     left: -$drawer-width;
     width: $drawer-width;
+    min-width: 18rem;
     height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
@@ -133,6 +134,7 @@ label[for="drawer-toggle"] {
         display: flex;
         position: relative;
         width: 100%;
+        flex-shrink: 0;
 
 
         &:before {
@@ -178,13 +180,15 @@ label[for="drawer-toggle"] {
             display: flex;
             flex-direction: column;
             width: 100%;
+            height: auto;
             display: none;
-            overflow-y: hidden;
+            overflow-y: auto;
 
             &.levelscolumn#tab-1 {
                 color: $white2;
 
                 & .readout, & .stagebanner {
+                    flex-shrink: 0;
                     padding: 0.5rem 0.8rem;
                     line-height: 1.4;
                     background: $black1;
@@ -239,6 +243,7 @@ label[for="drawer-toggle"] {
 
                 & .select {
                     flex: 1;
+                    flex-shrink: 0;
                     padding: 0.5rem 0;
                     user-select: none;
 
@@ -329,6 +334,7 @@ label[for="drawer-toggle"] {
                 & .settings {
                     padding: 0 1rem 0.8rem 1rem;
                     background: $black1;
+                    flex-shrink: 0;
 
                     & h5 {
                         display: inline-block;
@@ -370,6 +376,7 @@ label[for="drawer-toggle"] {
 
             &.generatorscolumn#tab-2, &.referencecolumn#tab-3 {
                 & .reference, & .generator {
+                    flex-shrink: 0;
                     width: 90%;
                     font-size: 95%;
                     line-height: 1.6;
@@ -379,6 +386,7 @@ label[for="drawer-toggle"] {
                     }
                 }
                 & header {
+                    flex-shrink: 0;
                     padding: 1rem;
 
                     font-size: 150%;
