--- a/sass/imports/media_queries.scss
+++ b/sass/imports/media_queries.scss
@@ -1,31 +1,33 @@
 
 @media screen and (max-width: 48rem) {
-
     label[for="drawer-toggle"] {
-        transition: all 0s;
+        transition: left 410ms, opacity 210ms, background 2s;
     }
 
     #drawer-toggle:checked {
         & ~ label[for="drawer-toggle"] {
-            left: 100%;
+            left: 60%;
             z-index: 2;
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            background: rgba(0, 0, 0, 0.3);
 
             & .hamburger {
+                top: 4%;
+                left: 3%;
                 transform: translateX(-4rem);
                 &:before {
-                    background: $white3;
-                    transform: translateY(0.68rem) rotateZ(-43deg);
+                    transform: translateY(0.68rem) translateX(4rem) rotateZ(-43deg);
                 }
                 &:after {
-                    background: $white3;
-                    transform: translateY(-0.68rem) rotateZ(43deg);
+                    transform: translateY(-0.68rem) translateX(4rem) rotateZ(43deg);
                 }
             }
         }
-
         & ~ #drawer {
             left: 0;
-            width: 100%;
+            width: 60%;
         }
 
         & ~ .maincolumn {
@@ -35,5 +37,32 @@
 
     .maincolumn {
         transition: all 1s;
+    }
+}
+
+@media screen and (max-width: 32rem) {
+    #drawer-toggle:checked {
+        & ~ label[for="drawer-toggle"] {
+            left: 82%;
+            background: none;
+            height: 3rem;
+            & .hamburger {
+                top: 1.5rem;
+                &:before {
+                    background: $white3;
+                }
+                &:after {
+                    background: $white3;
+                }
+            }
+        }
+        & ~ #drawer {
+            left: 0;
+            width: 100%;
+        }
+
+        & ~ .maincolumn {
+            padding-left: 0;
+        }
     }
 }
